test/conformance/chainsaw/mutating-policies/admission/applyconfiguration/deployments.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: applyconfiguration
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-deploy-2
  namespace: applyconfiguration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
