test/conformance/chainsaw/mutating-policies/admission/applyconfiguration/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: jsonpatch
spec:
  steps:
  - name: create policy
    use:
      template: ..//../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ..//../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-mpol-applyconfiguration
  - name: create deployments
    try:
    - create:
        file: deployments.yaml
    - assert:
        file: deployments.yaml
  - name: check patches
    try:
    - assert:
        file: patched-deployments.yaml
